--- a/VecinosProyectWeb/src/app/registrar/registrar.component.html
+++ b/VecinosProyectWeb/src/app/registrar/registrar.component.html
@@ -1,4 +1,24 @@
-<p>registrar works!</p>
-
-
-<label for="">nueva</label>
+<div class="card" style="width: 18rem; align-items: center;  justify-content: center; align-self: center;">
+    <h1 class="card-title">REGISTRAR</h1>
+    <img src="https://scontent.fmex10-4.fna.fbcdn.net/v/t31.18172-8/15800207_1162777477174346_3239633599950671227_o.jpg?_nc_cat=104&ccb=1-3&_nc_sid=09cbfe&_nc_eui2=AeF1buNwGsvfvHGySydEuXh_SfB30GeX2HhJ8HfQZ5fYeEynbLy-Uaq5c3f5vjK_VlK2-__EGXrbnH1QJ-zC7rlx&_nc_ohc=WwkHNtuf5t4AX8eDv_a&_nc_ht=scontent.fmex10-4.fna&oh=8db27586cec38d25d330f7ed44c2d468&oe=60BBDB16" class="card-img-top" alt="...">
+    <form class="px-4 py-3" [formGroup]="registerForm" (ngSubmit)="onRegister()">
+      <div class="mb-3">
+        <label for="exampleDropdownFormEmail1" class="form-label">Número de Telefono</label>
+        <input name="correo" type="email" class="form-control" id="exampleDropdownFormEmail1" placeholder="*** *** ****" formControlName="email">
+      </div>
+      <div class="mb-3">
+        <label for="exampleDropdownFormPassword1" class="form-label">Contraseña</label>
+        <input name="contra" type="password" class="form-control" id="exampleDropdownFormPassword1" placeholder="Contraseña" formControlName="password">
+      </div>
+      <div class="mb-3">
+        <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="dropdownCheck">
+          <label class="form-check-label" for="dropdownCheck">
+            Recordarme
+          </label>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Registrar</button> 
+    </form>
+    <a class="dropdown-item" [routerLink]="['/home']" routerLinkActive="router-link-active" >Regresar al inicio</a>
+  </div>
